--- a/Atividade 01/Atividade01.ipynb
+++ b/Atividade 01/Atividade01.ipynb
@@ -2,13 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O fatorial de 3 é 6\n",
+      "O fatorial de 1 é 1\n",
+      "O fatorial de 10 é 3628800\n",
+      "O fatorial de 0 é 1\n",
+      "O fatorial de -3 é -1\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Atividade de fatorial iniciante\n",
     "def fatorial(n):\n",
@@ -47,13 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequência dos 5 primeiros números de Fibonacci: [0, 1, 1, 2, 3]\n",
+      "Sequência dos 20 primeiros números de Fibonacci: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]\n",
+      "Sequência dos 30 primeiros números de Fibonacci: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Atividade sobre a sequência de Fibonacci iniciante\n",
     "def fibonacci(n):\n",
@@ -90,13 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A primeira raiz é: 1.0\n",
+      "A segunda raiz é: -7.0\n",
+      "As raízes da equação 1x² + -2x + 1 = 0 são: x1 = 1.0, x2 = 1.0\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Atividade de bhaskara inciante\n",
     "import math # Importa a biblioteca math para o programa\n",
@@ -142,13 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 é divisível por 5: True e o valor da divisão é: 6.0\n",
+      "6 é divisível por 0? False (divisão incorreta)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Atividade de divisores iniciante\n",
     "from os import truncate # função para cortar strings\n",
@@ -195,8 +220,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "FisComp",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
