--- a/Atividade 03/MonteCarlo.ipynb
+++ b/Atividade 03/MonteCarlo.ipynb
@@ -213,6 +213,28 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def pi_monte_carlo(n):\n",
+    "    num = np.random.uniform(0, 1, size=(n, 2))\n",
+    "    x = num[:, 0]\n",
+    "    y = num[:, 1]\n",
+    "    \n",
+    "    dentro_circulo = (x**2 + y**2) <= 1 \n",
+    "    num_inside = np.sum(dentro_circulo)\n",
+    "    \n",
+    "    return num_inside, n\n",
+    "\n",
+    "p = pi_monte_carlo(100000)[0] / pi_monte_carlo(100000)[1]\n",
+    "print(4 * p)"
+   ]
   }
  ],
  "metadata": {
