--- a/Atividade 05/OsciladorHarm.ipynb
+++ b/Atividade 05/OsciladorHarm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "47aec011",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,7 @@
     "  return f\n",
     "\n",
     "tempo = np.linspace(0, 20, 1000)\n",
-    "Y = solve_ivp(oh, [0, tempo[-1]], y0, t_eval=tempo, args=(2*np.pi, 0.6)) # wa² = w0² - (gamma/2)²\n",
-    "\n",
+    "Y = solve_ivp(oh, [0, tempo[-1]], y0, t_eval=tempo, args=(2*np.pi, 0.6)) \n",
     "plt.subplot(211)\n",
     "plt.plot(Y.t, Y.y[0], label='posição')\n",
     "plt.legend()\n",
