--- a/Atividade 01/Atividade01.ipynb
+++ b/Atividade 01/Atividade01.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
     "  delta = b**2 - 4*a*c # Fórmula do delta que será usado na fórmula de bhaskara\n",
     "\n",
     "  if delta < 0:\n",
-    "    return None  # Não existem raízes reais\n",
+    "    raise Exception(\"delta negativo, Não existem raizes reais\")\n",
     "  elif delta == 0:\n",
     "    x = -b / (2*a)\n",
     "    return (x, x)  # Raízes iguais\n",
